# LHOS-AEGIS-360

./: .clang-format  .gitignore  AUDIT_STATUS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  HANDOF.md  HANDOFF.md  LEGACY_EXTRACTION.md  README.md  partitions.csv  sdkconfig.defaults  verify_sdkconfig.sh
legacy_reference/: .clang-format  .clang-tidy  .dockerignore  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING  Dockerfile  Makefile  README.md  ble_distance_calc.py  bleclient.py  build_number.py  clean.py  convert_capture_to_hex.py  convert_modbus.py  counter_crc.py  j1939FMI.csv  j1939SPN.csv  j1939_database_filter.py  load_env.py  logger.py  minify_json.py  modbusMaps.json  modbus_maps.xlsx  obd2-trouble-codes.csv  obd2_db_builder.py  platformio.ini  pyproject.toml  run.ps1  run.sh  sdkconfig.defaults
legacy_reference/PowerCommand_modbus_map_to_json/: Book1.xlsx  Cummins-PowerCommand-2.2-2.3-3.3-modbus-register-mapping-503-845.docx  docx2json.py  modbus_parser.py  ~$Book1.xlsx
legacy_reference/boards/: README
legacy_reference/lib/ARD1939ESP32S3/examples/: ARD1939.ino
legacy_reference/lib/ARD1939ESP32S3/src/: ARD1939ESP32S3.cpp  ARD1939ESP32S3.h  ARD1939ESP32S3_CPP.BKP  ARD1939ESP32S3_H.BKP  can.cpp
legacy_reference/lib/AsyncA7670/: README.md
legacy_reference/lib/AsyncA7670/src/: AsyncA7670.cpp  AsyncA7670.h  AsyncA7670Client.cpp  AsyncA7670Client.h  AsyncA7670Fifo.h
legacy_reference/lib/NimBLE-Arduino/: .piopm
legacy_reference/lib/SSLClient/: .piopm
legacy_reference/src/: main.cpp  main_test_obdreader.old  ri505_sniffer.backup
(+916 files in other folders)
